crates/velme-cli/tests/snapshots/codes__vl0701_json.snap
---
source: crates/velme-cli/tests/codes.rs
expression: redact(&pretty)
---
{
  "diagnostics": [],
  "format": "velme-cli/1",
  "notices": [],
  "results": [
    {
      "diagnostics": [
        {
          "code": "VL0701",
          "file": "add.velme",
          "labels": [],
          "message": "The built version of `Add` is missing — run `velme build`.",
          "notes": [
            "there is no file for artifact b3:27e0d330aefe3e5ed537d0a7d8eccbcf64b0801b3617d50c649e3dab31887374"
          ],
          "severity": "error",
          "span": {
            "column": 1,
            "end": 315,
            "line": 4,
            "start": 116
          }
        }
      ],
      "goal": "Add",
      "status": "failed"
    }
  ],
  "status": "failed"
}
