crates/velme-cli/tests/snapshots/codes__vl0703_human.snap
---
source: crates/velme-cli/tests/codes.rs
expression: redact(&human.stderr)
---
Error: The built version of `Add` was changed or damaged.  [VL0703]
    ╭─[ add.velme:4:1 ]
    │
  4 │ ╭─▶ goal Add(a: Number, b: Number) -> Number:
    ┆ ┆   
 11 │ ├─▶         - Add(0.1, 0.2) == 0.3
    │ │                                    
    │ ╰──────────────────────────────────── here
    │     
    │     Note: artifact b3:27e0d330aefe3e5ed537d0a7d8eccbcf64b0801b3617d50c649e3dab31887374 now hashes to b3:5e91391be2a6e5fcd3399556b7dea87af8e9b114a499b5f4bc3cf3aac7d56d38
────╯
