crates/velme-cli/tests/snapshots/codes__vl0703_json.snap
---
source: crates/velme-cli/tests/codes.rs
expression: redact(&pretty)
---
{
  "diagnostics": [],
  "format": "velme-cli/1",
  "notices": [],
  "results": [
    {
      "diagnostics": [
        {
          "code": "VL0703",
          "file": "add.velme",
          "labels": [],
          "message": "The built version of `Add` was changed or damaged.",
          "notes": [
            "artifact b3:eb3bdbf705b664b9710a629c28bf70bd19c330c5d02a0b4d01ffe0144fee6dec now hashes to b3:5f34596bda08ed3d083215e00d6a9cebbac93d0537528ea607ff432b8dde2488"
          ],
          "severity": "error",
          "span": {
            "column": 1,
            "end": 315,
            "line": 4,
            "start": 116
          }
        }
      ],
      "goal": "Add",
      "status": "failed"
    }
  ],
  "status": "failed"
}
