crates/velme-cli/tests/snapshots/codes__vl0903_human.snap
---
source: crates/velme-cli/tests/codes.rs
expression: redact(&human.stderr)
---
Error: There's no goal called `Ad`. Did you mean `Add`?  [VL0903]
   ╭─[ add.velme ]
───╯
